# huffman

./: CMakeLists.txt  code.h  coder.h  decode.cpp  encode.cpp  fsm.h  heap.h  scan.h  stack_r.h  stack_w.h  traverse.h  tree.h
test/: multiline.txt  oneline.txt  russian.txt
